Remove stray bracket

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -16,7 +16,7 @@
     {{#with election}}
     <table>
         <tr><td>Last updated</td><td>{{utcTimestamp updated}} (<span class="relativetime" title="{{utcTimestamp updated}}"></span>)</td></tr>
-        <tr><td>Site name</td><td>{{{url sitename electionMeta/siteUrl)}}}</td></tr>
+        <tr><td>Site name</td><td>{{{url sitename electionMeta/siteUrl}}}</td></tr>
         <tr><td>Host name</td><td>{{electionMeta/siteHostname}}</td></tr>
         <tr><td>API slug</td><td>{{electionMeta/apiSlug}}</td></tr>
         <tr><td>Title</td><td>{{{url electionUrl title}}}</td></tr>
