Add ifNotEmpty helper

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -31,8 +31,8 @@
         <tr><td>End date</td><td>{{utcTimestamp election/dateEnded}}</td></tr>
         <tr><td>Opavote URL</td><td>{{{url election/opavoteUrl election/opavoteUrl}}}</td></tr>
         <tr><td>Voter stats</td><td>{{election/statVoters}}</td></tr>
-        <tr><td>Candidates</td><td>{{electionMeta/numNominees}} candidates:<pre>{{json electionMeta/nominees}}</pre></td></tr>
-        <tr><td>Winners</td><td>{{electionMeta/numWinners}} winners:<pre>{{json electionMeta/winners}}</pre></td></tr>
+        <tr><td>Candidates</td><td><pre>{{json electionMeta/nominees}}</pre></td></tr>
+        <tr><td>Winners</td><td><pre>{{json electionMeta/winners}}</pre></td></tr>
         <tr><td>Badges</td><td>{{{electionMeta/electionBadges}}}</td></tr>
     </table>
 </div>
