--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,5 @@
+<base target="_blank" />
+
 <h1>{{{heading}}}</h1>
 
 {{#with data}}
@@ -34,14 +36,14 @@
         <tr><td>Candidates</td><td>
             <ul class="list">
                 {{#each election/arrNominees}}
-                <li class="item"><a href="{{siteUrl}}/users/{{this.userId}}">{{this.userName}}</a></li>
+                <li class="item"><a href="{{this.permalink}}">{{this.userName}}</a></li>
                 {{/each}}
             </ul>
         </td></tr>
         <tr><td>Winners</td><td>
             <ul class="list">
                 {{#each election/arrWinners}}
-                <li class="item"><a href="{{siteUrl}}/users/{{this.userId}}">{{this.userName}}</a></li>
+                <li class="item"><a href="{{this.permalink}}">{{this.userName}}</a></li>
                 {{/each}}
             </ul>
         </td></tr>
