--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,6 @@
-<base target="_blank" />
-
 <h1>{{{heading}}}</h1>
+
+<base target="_blank" />
 
 {{#with data}}
 
@@ -36,7 +36,7 @@
         <tr><td>Candidates</td><td>
             <ul class="list">
                 {{#each election/arrNominees}}
-                <li class="item"><a href="{{this.permalink}}">{{this.userName}}</a></li>
+                <li class="item"><a href="{{this.permalink}}">{{this.userName}}</a>; <a href="{{this.nominationLink}}">nomination</a>; score {{this.userScore}}; {{this.userYears}}</li>
                 {{/each}}
             </ul>
         </td></tr>
