--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -3,6 +3,7 @@
     --text-colour: #000;
     --link-colour: rgb(0, 0, 139);
     --border-color: #999;
+    --margin-size: 40px;
 }
 * {
     font-family: Arial, sans-serif;
@@ -17,14 +18,14 @@ body {
     overflow-x: hidden;
 }
 h1, h2, h3, h4, h5, h6 {
-    margin: 2em 0 0.5em;
+    margin: 1.3em 0 0.5em;
+}
+h1:first-child {
+    margin-top: 10px;
 }
 h1 {
     font-size: 1.4em;
     color: var(--heading-colour);
-}
-h1:first-child {
-    margin-top: 10px;
 }
 h2 {
     font-size: 1.2em;
@@ -33,6 +34,9 @@ h2 {
 ol, ul {
     padding-inline-start: 20px;
     padding-left: 20px;
+}
+li {
+    margin: 0.5em 0;
 }
 td .list {
     margin: 0;
@@ -45,7 +49,7 @@ a:visited {
     color: var(--text-colour);
 }
 blockquote {
-    margin: 2em 0;
+    margin: 2em 0 1.3em;
 }
 table {
     max-width: 800px;
@@ -109,13 +113,16 @@ form button {
     flex-wrap: wrap;
     align-items: start;
 }
-.dashboard > * {
-    flex: 1 1 calc(50% - 40px);
+.dashboard section {
+    flex: 1 1 calc(50% - var(--margin-size));
     max-width: 620px;
-    margin-right: 40px;
+    margin-right: var(--margin-size);
 }
-.dashboard > *:last-child {
+.dashboard section:last-child {
     margin-right: 0;
+}
+.dashboard section aside {
+    margin-bottom: var(--margin-size);
 }
 .result {
     margin: 30px 0px;
@@ -186,6 +193,10 @@ form button {
     th:first-child,
     td:first-child {
         font-weight: bold;
+    }
+    th:last-child,
+    td:last-child {
+        min-width: 220px;
     }
     pre {
         max-width: none;
