Sync state from chat transcript on startup

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -82,7 +82,7 @@
             </table>
             {{/with}}
         </aside>
-        
+
         <aside>
             <h2>Room Activity</h2>
             {{#with botconfig}}
@@ -97,7 +97,7 @@
                 <tr><td>roomBecameIdleAWhileAgo</td><td>{{{boolean roomBecameIdleAWhileAgo}}}</td></tr>
                 <tr><td>roomBecameIdleHoursAgo</td><td>{{{boolean roomBecameIdleHoursAgo}}}</td></tr>
                 <tr><td>botHasBeenQuiet</td><td>{{{boolean botHasBeenQuiet}}}</td></tr>
-                <tr><td>lastMessageIsPostedByBot</td><td>{{{boolean lastMessageIsPostedByBot}}}</td></tr>
+                <tr><td>botSentLastMessage</td><td>{{{boolean botSentLastMessage}}}</td></tr>
             </table>
             {{/with}}
         </aside>
