--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -9,6 +9,7 @@
     font-family: Arial, sans-serif;
     line-height: 1.3;
     color: var(--text-colour);
+    box-sizing: border-box;
 }
 body {
     margin: 0;
@@ -85,6 +86,7 @@ pre:empty:before {
 }
 form {
     max-width: 800px;
+    margin-top: 30px;
 }
 form * {
     font-size: 0.9rem;
@@ -101,11 +103,16 @@ form textarea {
     border-radius: 5px;
     border: 1px solid var(--border-color);
 }
+form input::placeholder {
+    color: #ccc;
+    font-size: 0.9em;
+}
 form textarea {
     min-height: 130px;
 }
 form button {
     padding: 8px 20px;
+    font-size: 1em;
 }
 .dashboard {
     display: flex;
@@ -156,6 +163,10 @@ form button {
     content: ")";
     font-style: normal;
 }
+
+.mt20 { margin-top: 20px; }
+.mt40 { margin-top: 40px; }
+
 
 @media (max-width: 767px) {
     body {
