--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -25,31 +25,51 @@
                 <tr><td>API slug</td><td>{{apiSlug}}</td></tr>
                 <tr><td>Title</td><td>{{{url election/electionUrl election/title}}}</td></tr>
                 <tr><td>Election ID</td><td>{{election/electionNum}}</td></tr>
-                <tr><td>Chat room</td><td>{{{url election/chatUrl election/chatUrl}}}</td></tr>
+                <tr><td>Chat room</td>
+                    {{#if election/chatUrl}}
+                    <td>{{{url election/chatUrl election/chatUrl}}}</td>
+                    {{else}}
+                    <td></td>
+                    {{/if}}
+                </tr>
                 <tr><td>Positions</td><td>{{election/numPositions}}</td></tr>
                 <tr><td>Rep. to vote</td><td>{{election/repVote}}</td></tr>
                 <tr><td>Rep. to nominate</td><td>{{election/repNominate}}</td></tr>
                 <tr><td>Current phase</td><td>{{election/phase}}</td></tr>
                 <tr><td>Nomination date</td><td>{{utcTimestamp election/dateNomination}} <span class="relativetime" title="{{utcTimestamp election/dateNomination}}"></span></td></tr>
-                <tr><td>Primary date</td><td>{{utcTimestamp election/datePrimary}} <span class="relativetime" title="{{utcTimestamp election/datePrimary}}"></span></td></tr>
+                <tr><td>Primary date</td>
+                    {{#if election/datePrimary}}
+                    <td>{{utcTimestamp election/datePrimary}} <span class="relativetime" title="{{utcTimestamp election/datePrimary}}"></span></td>
+                    {{else}}
+                    <td></td>
+                    {{/if}}
+                </tr>
                 <tr><td>Election date</td><td>{{utcTimestamp election/dateElection}} <span class="relativetime" title="{{utcTimestamp election/dateElection}}"></span></td></tr>
                 <tr><td>End date</td><td>{{utcTimestamp election/dateEnded}} <span class="relativetime" title="{{utcTimestamp election/dateEnded}}"></span></td></tr>
                 <tr><td>Opavote URL</td><td>{{{url election/opavoteUrl election/opavoteUrl}}}</td></tr>
                 <tr><td>Voter stats</td><td>{{election/statVoters}}</td></tr>
-                <tr><td>Candidates</td><td>
-                    <ul class="list">
+                <tr><td>Candidates</td>
+                    {{#if election/arrNominees.length}}
+                    <td><ul class="list">
                         {{#each election/arrNominees}}
                         <li class="item"><a href="{{this.permalink}}">{{this.userName}}</a>; <a href="{{this.nominationLink}}">nomination</a>; score {{this.userScore}}; {{this.userYears}}</li>
                         {{/each}}
-                    </ul>
-                </td></tr>
-                <tr><td>Winners</td><td>
-                    <ul class="list">
+                    </ul></td>
+                    {{else}}
+                    <td></td>
+                    {{/if}}
+                </tr>
+                <tr><td>Winners</td>
+                    {{#if election/arrWinners.length}}
+                    <td><ul class="list">
                         {{#each election/arrWinners}}
                         <li class="item"><a href="{{this.permalink}}">{{this.userName}}</a></li>
                         {{/each}}
-                    </ul>
-                </td></tr>
+                    </ul></td>
+                    {{else}}
+                    <td></td>
+                    {{/if}}
+                </tr>
                 <tr><td>Badges</td><td>
                     <ul class="list">
                         {{#each election/electionBadges}}
