Fix handlebars context

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -73,7 +73,7 @@
                 <tr><td>Badges</td><td>
                     <ul class="list">
                         {{#each election/electionBadges}}
-                        <li class="item"><a href="{{siteUrl}}/help/badges/{{this.badge_id}}">{{this.name}} [{{this.badge_id}}]</a></li>
+                        <li class="item"><a href="{{@root/data/siteUrl}}/help/badges/{{this.badge_id}}">{{this.name}} [{{this.badge_id}}]</a></li>
                         {{/each}}
                     </ul>
                 </td></tr>
