Add appname to page title

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,7 +6,7 @@
 
 <blockquote>
     <p>I am <strong><a href="https://github.com/samliew/se-electionbot">ElectionBot</a></strong>, a chatbot to handle queries for commonly-asked questions in an election chat room.</p>
-    <p>I am currently in room {{{url chatRoomUrl chatRoomUrl}}}.</p>
+    <p>This instance is listening to {{{url chatRoomUrl chatRoomUrl}}}.</p>
     <p>
         Please direct any queries &amp; feedback to <a href="https://github.com/samliew/se-electionbot/graphs/contributors">my developers</a> in the
         <a href="https://chat.stackoverflow.com/rooms/190503/electionbot-development">development chatroom</a> or <a href="https://github.com/samliew/se-electionbot/issues">create an issue on Github</a>.
