--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>ElectionBot | {{page/title}}</title>
+    <title>{{page/appName}} | {{page/title}}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="/favicon.ico" />
     <link rel="stylesheet" href="/css/styles.css" />
