lastMessageTime is used to track mute end

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -89,7 +89,7 @@
                 <tr><td>isMuted</td><td>
                     {{{boolean isMuted}}}
                     {{#if isMuted}}
-                    <span class="relativetime" title="{{utcTimestamp muteEndDate}}" data-prefix="ends "></span>
+                    <span class="relativetime" title="{{utcTimestamp lastMessageTime}}" data-prefix="ends "></span>
                     {{/if}}
                 </td></tr>
                 <tr><td>throttleSecs</td><td>{{throttleSecs}} secs</td></tr>
